# Autonomous-tool-sharing-between-operators-using-multi-robot-system

./: .gitignore  CMakeLists.txt  Pipfile  README.md  pyproject.toml  requirements.txt
Additional files for nadzoru/lgob/: AUTHORS  Makefile  build.lua  build_all.lua  config-mingw64.lua  config-win32.lua  config.lua  make_release.lua  readme.md
Additional files for nadzoru/nadzoru/: README  main.lua
SCT_models/: example_sct_yaml.yaml
circle_task/: CMakeLists.txt  circle_task_entity.cpp  circle_task_entity.h
controllers/: CMakeLists.txt
controllers/example_sct/: CMakeLists.txt  SCT.cpp  SCT.h  example_sct.cpp  example_sct.h
controllers/example_sct_yaml/: CMakeLists.txt  SCT.h  example_sct_yaml.cpp  example_sct_yaml.h
controllers/example_sctprob/: CMakeLists.txt  SCT.cpp  SCT.h  example_sctprob.cpp  example_sctprob.h
controllers/example_sctprobpub/: CMakeLists.txt  SCT.h  example_sctprobpub.cpp
controllers/example_sctpub/: SCT.cpp  example_sctpub.h
controllers/example_sctpub_yaml/: SCT.cpp  SCT.h  example_sctpub_yaml.cpp
controllers/follower/: CMakeLists.txt  SCT.cpp  SCT.h  SCT_follower.cpp  SCT_follower.h  SCT_follower_exchange.h  follower.cpp  follower.h  pid.cpp
controllers/follower2/: CMakeLists.txt  SCT.cpp  SCT.h  follower2.cpp  follower2.h
controllers/leader/: CMakeLists.txt  SCT_leader.cpp  SCT_leader.h  leader.cpp  leader.h
controllers/static_connector/: static_connector.cpp  static_connector.h
controllers/test_possensor/: CMakeLists.txt  test_possensor.cpp  test_possensor.h
docker/: .dockerignore  Docker-commands  Dockerfile  experiment.sh
e-puck_leader/: CMakeLists.txt
e-puck_leader/simulator/: dynamics2d_epuckleader_model.cpp  dynamics2d_epuckleader_model.h  epuckleader_proximity_default_sensor.cpp  epuckleader_proximity_default_sensor.h  qtopengl_epuckleader.cpp  qtopengl_epuckleader.h
epuckpos/: CMakeLists.txt
epuckpos/control_interface/: ci_epuckpos_proximity_sensor.cpp  ci_epuckpos_proximity_sensor.h
epuckpos/simulator/: dynamics2d_epuckpos_model.cpp  dynamics2d_epuckpos_model.h  dynamics3d_epuckpos_model.cpp  dynamics3d_epuckpos_model.h  epuckpos_entity.cpp  epuckpos_entity.h  epuckpos_proximity_default_sensor.cpp  epuckpos_proximity_default_sensor.h  qtopengl_epuckpos.cpp  qtopengl_epuckpos.h
experiments/: example_sct.argos  example_sctprob.argos  example_sctprobpub.argos  example_sctpub.argos  experiment_template.argos  leader_follower.argos  run_multiple_simulations.sh  test_duplicate_chain.argos  test_possensor.argos  test_robot_exchange.argos  test_robot_exchange_SCT.argos  test_static_connector.argos  user_study_scenario1.argos  user_study_scenario1_order1.argos  user_study_scenario1_order2.argos  user_study_scenario2.argos  user_study_scenario2_order1.argos  user_study_scenario2_order2.argos  webviz_arena.argos  webviz_multi-op.argos  webviz_template.argos  webviz_training.argos
experiments/20R_5T_5000D/: 20R_5T_5000D_01.argos  20R_5T_5000D_02.argos  20R_5T_5000D_03.argos  20R_5T_5000D_04.argos  20R_5T_5000D_05.argos  20R_5T_5000D_06.argos  20R_5T_5000D_07.argos  20R_5T_5000D_08.argos  20R_5T_5000D_09.argos  20R_5T_5000D_10.argos  20R_5T_5000D_11.argos  20R_5T_5000D_12.argos  20R_5T_5000D_13.argos  20R_5T_5000D_14.argos  20R_5T_5000D_15.argos  20R_5T_5000D_16.argos  20R_5T_5000D_17.argos  20R_5T_5000D_18.argos  20R_5T_5000D_19.argos  20R_5T_5000D_20.argos  20R_5T_5000D_21.argos  20R_5T_5000D_22.argos  20R_5T_5000D_23.argos  20R_5T_5000D_24.argos  20R_5T_5000D_25.argos  20R_5T_5000D_26.argos  20R_5T_5000D_27.argos  20R_5T_5000D_28.argos  20R_5T_5000D_29.argos  20R_5T_5000D_30.argos  20R_5T_5000D_31.argos  20R_5T_5000D_32.argos  20R_5T_5000D_33.argos  20R_5T_5000D_34.argos  20R_5T_5000D_35.argos  20R_5T_5000D_36.argos  20R_5T_5000D_37.argos  20R_5T_5000D_38.argos  20R_5T_5000D_39.argos  20R_5T_5000D_40.argos  (+10 more)
experiments/20R_6T_100D/: 20R_6T_100D_01.argos  20R_6T_100D_02.argos  20R_6T_100D_03.argos  20R_6T_100D_04.argos  20R_6T_100D_05.argos  20R_6T_100D_06.argos  20R_6T_100D_07.argos  20R_6T_100D_08.argos  20R_6T_100D_09.argos  20R_6T_100D_10.argos  20R_6T_100D_11.argos  20R_6T_100D_12.argos  20R_6T_100D_13.argos  20R_6T_100D_14.argos  20R_6T_100D_15.argos  20R_6T_100D_16.argos  20R_6T_100D_17.argos  20R_6T_100D_18.argos  20R_6T_100D_19.argos  20R_6T_100D_20.argos
experiments/20R_6T_500D(300s)/: 20R_6T_500D_01.argos  20R_6T_500D_02.argos  20R_6T_500D_03.argos  20R_6T_500D_04.argos  20R_6T_500D_05.argos  20R_6T_500D_06.argos  20R_6T_500D_07.argos  20R_6T_500D_08.argos  20R_6T_500D_09.argos  20R_6T_500D_10.argos  20R_6T_500D_11.argos  20R_6T_500D_12.argos  20R_6T_500D_13.argos  20R_6T_500D_14.argos  20R_6T_500D_15.argos  20R_6T_500D_16.argos  20R_6T_500D_17.argos  20R_6T_500D_18.argos  20R_6T_500D_19.argos  20R_6T_500D_20.argos
letk/: AUTHORS  TODO
loop_functions/: CMakeLists.txt
loop_functions/leaderfollower_loop_functions/: CMakeLists.txt  experiment_loop_functions.cpp  experiment_loop_functions.h  manualcontrol_qtuser_functions.cpp  manualcontrol_qtuser_functions.h
plugins/: CMakeLists.txt
plugins/simulator/rectangle_task/: CMakeLists.txt  rectangle_task_entity.cpp
rectangle_task/: rectangle_task_entity.cpp  rectangle_task_entity.h
scripts/: create_video.py  generate_experiments.py  plot_stats.py
src/: CMakeLists.txt  argos3
src/loop_functions/leaderfollower_loop_functions/: CMakeLists.txt  experiment_loop_functions.cpp  experiment_loop_functions.h  manualcontrol_qtuser_functions.cpp  manualcontrol_qtuser_functions.h  manualcontrol_webvizuser_functions.cpp  manualcontrol_webvizuser_functions.h
src/plugins/robots/e-puck_leader/: CMakeLists.txt
src/plugins/robots/e-puck_leader/control_interface/: ci_epuckleader_proximity_sensor.cpp  ci_epuckleader_proximity_sensor.h
src/plugins/robots/e-puck_leader/simulator/: dynamics3d_epuckleader_model.cpp  epuckleader_entity.cpp  qtopengl_epuckleader.cpp
src/plugins/simulator/entities/: CMakeLists.txt  rectangle_task_entity.cpp  rectangle_task_entity.h
src/protos/: CMakeLists.txt  README.md  time_step.proto
utility/: CMakeLists.txt
(+683 files in other folders)
